namespace GoalGrow.Entity.Enums
{
    public enum BadgeRarity
    {
        Common = 1,     // Comune (facile da ottenere)
        Uncommon = 2,   // Non comune
        Rare = 3,       // Raro
        Epic = 4,       // Epico
        Legendary = 5   // Leggendario (molto difficile)
    }
}
