namespace GoalGrow.Entity.Enums
{
    public enum ChallengeDifficulty
    {
        Easy = 1,       // Facile (per principianti)
        Medium = 2,     // Media
        Hard = 3,       // Difficile
        Expert = 4      // Esperto (molto difficile)
    }
}
