namespace GoalGrow.Entity.Enums
{
    public enum ChallengeType
    {
        Saving = 1,         // Sfida di risparmio (es: risparmia 500€ in un mese)
        Investment = 2,     // Sfida di investimento (es: investi in 3 prodotti diversi)
        Budget = 3,         // Sfida di budget (es: non superare il budget alimentari per 30 giorni)
        Goal = 4,           // Sfida di obiettivo (es: raggiungi il 50% di un goal)
        Consistency = 5,    // Sfida di costanza (es: registra transazioni per 7 giorni di fila)
        Learning = 6,       // Sfida di apprendimento (es: completa 5 tutorial)
        Social = 7          // Sfida sociale (es: invita 3 amici)
    }
}
